an attempt at fixing the headers not being centered on mobile :(

--- a/gallery.css
+++ b/gallery.css
@@ -32,8 +32,7 @@ body {
 .header {
  display:flex;
  justify-content: center;
- text-align: center;
- padding: 2rem 5%;
+ padding: 2rem 0;
  margin: 1rem;
  align-items: center;
 }
